# pyproject-setuptools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
