[project]
name = "python-packaging"
version = "1.0.0"
description = ""
authors = [{ name = "pederhan", email = "pederhan@uio.no" }]
dependencies = ["mkdocs>=1.3.1", "mkdocs-material>=8.5.0"]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/pederhan/python-packaging"
repository = "https://github.com/pederhan/python-packaging"
documentation = "https://pederhan.github.io/python-packaging/"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
